add flyway, zio, and config loading

--- a/src/main/resources/application.conf
+++ b/src/main/resources/application.conf
@@ -1,11 +1,5 @@
 app {
-       api {
-            port = 8080
-            port = ${?API_PORT}
-            host = "localhost"
-            host = ${?API_HOST}
-       }
-
+       type: "app-config"
        database {
             url = "jdbc:postgresql://localhost:5432/postgres"
             url = ${?DB_URL}
@@ -18,22 +12,4 @@ app {
             schema = "bitcoin"
             schema = ${?DB_SCHEMA}
           }
-
-       queue {
-            consumer {
-                server = "localhost:9092"
-                server = ${CONSUMER_SERVER}
-                group = "item-extern-group"
-                group = ${CONSUMER_GROUP}
-                topic = "library-management-item-extern-topic"
-                topic = ${CONSUMER_TOPIC}
-            }
-
-            producer {
-                server = "localhost:9092"
-                server = ${PRODUCER_SERVER}
-                topic = "library-management-item-intern-topic"
-                topic = ${PRODUCER_TOPIC}
-            }
-       }
 }
