--- a/.github/workflows/scala.yml
+++ b/.github/workflows/scala.yml
@@ -13,7 +13,7 @@ jobs:
   build:
 
     runs-on: ubuntu-latest
-
+   # TODO set up postgres to run on GHA.
     steps:
       - uses: actions/checkout@v4
       - name: Set up JDK 11
