add docker. Remove automatic flyway since it wasn't compatible and rely on script instead

--- a/src/main/resources/application.conf
+++ b/src/main/resources/application.conf
@@ -5,7 +5,7 @@ app {
     url = ${?DB_URL}
     user = "myuser"
     user = ${?DB_USER}
-    password = "postgres"
+    password = "mypassword"
     password = ${?DB_PASSWORD}
   }
 }
