add basic producer and consumer structure

--- a/src/main/resources/application.conf
+++ b/src/main/resources/application.conf
@@ -1,5 +1,5 @@
-app {
-   type: "app-config"
+server {
+   type: "server-config"
    database {
     url = "jdbc:postgresql://localhost:5432/postgres"
     url = ${?DB_URL}
@@ -7,5 +7,21 @@ app {
     user = ${?DB_USER}
     password = "mypassword"
     password = ${?DB_PASSWORD}
+  },
+  server-metadata-config {
+    port = 8080
+    port = ${?SERVER_PORT}
   }
+}
+
+eventListener {
+    type: "event-listener-config"
+    transaction-events: {
+        topic-name: "transactionEvents",
+        bootstrap-servers: ["localhost:29092"]
+        consumer: {
+            group-id: "consumer-group-1"
+            consumer-count: 1
+        }
+    }
 }
