--- a/src/test/resources/application.conf
+++ b/src/test/resources/application.conf
@@ -1,11 +1,26 @@
-app {
-   type: "app-config"
+server {
+   type: "server-config"
    database {
     url = "jdbc:postgresql://localhost:5432/postgres"
     url = ${?DB_URL}
     user = "myuser"
     user = ${?DB_USER}
-    password = "postgres"
+    password = "mypassword"
     password = ${?DB_PASSWORD}
+  },
+  serverMetadataConfig {
+    port = 8080
+    port = ${SERVER_PORT}
   }
+}
+
+eventListener {
+    transactionEvents: {
+        topicName: "transactionEvents",
+        bootStrapServers: ["localhost:29092"]
+        consumer: {
+            groupId: "consumer-group-1"
+            consumerCount: 1
+        }
+    }
 }
