fix stuff to run again

--- a/src/test/resources/application.conf
+++ b/src/test/resources/application.conf
@@ -8,19 +8,28 @@ server {
     password = "mypassword"
     password = ${?DB_PASSWORD}
   },
-  serverMetadataConfig {
+  transaction-events {
+      topic-name = "transactionEvents",
+      bootstrap-servers = ["localhost:29092"]
+      consumer = {
+          group-id = "consumer-group-1"
+          consumer-count = 1
+      }
+  },
+  server-metadata-config {
     port = 8080
-    port = ${SERVER_PORT}
+    port = ${?SERVER_PORT}
   }
 }
 
 eventListener {
-    transactionEvents: {
-        topicName: "transactionEvents",
-        bootStrapServers: ["localhost:29092"]
+    type: "event-listener-config"
+    transaction-events {
+        topic-name: "transactionEvents",
+        bootstrap-servers: ["localhost:29092"]
         consumer: {
-            groupId: "consumer-group-1"
-            consumerCount: 1
+            group-id: "consumer-group-1"
+            consumer-count: 1
         }
     }
 }
