--- a/src/main/resources/application.conf
+++ b/src/main/resources/application.conf
@@ -11,6 +11,14 @@ server {
   server-metadata-config {
     port = 8080
     port = ${?SERVER_PORT}
+  },
+  transaction-events {
+    topic-name = "transactionEvents",
+    bootstrap-servers = ["localhost:29092"]
+    consumer = {
+        group-id = "consumer-group-1"
+        consumer-count = 1
+    }
   }
 }
 
